# DuanwuLab

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: styles.css  tailwind.css
shared/: Cargo.toml
shared/src/: image_compressor.rs  json_formatter.rs  lib.rs
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  store.rs
src-tauri/src/commands/: compress.rs  json.rs  json_format.rs  mod.rs
src/components/: base64.rs  error_toast.rs  json_formatter.rs  jwt.rs  layout.rs  mod.rs  password_gen.rs  sidebar.rs  unix_timestamp.rs  url_codec.rs
src/components/common/: button.rs  clear_button.rs  error_toast.rs  mod.rs  nav_item.rs  output_with_copy.rs  pill.rs  pill_select.rs
src/components/image_compressor/: file_list.rs  mod.rs  preview.rs  toolbar.rs  types.rs  utils.rs
src/components/json_viewer/: components.rs  constants.rs  input.rs  mod.rs  node.rs  search.rs  types.rs
src/context/: error.rs  mod.rs  store.rs  store_provider.rs
src/utils/: mod.rs  safe_invoke.rs
