[package]
name = "duanwu-lab-ui"
version.workspace = true
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared-types = { path = "shared", features = ["image-compressor"] }
dioxus = { version = "0.7", features = ["web"] }
dioxus-logger = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
strum = { version = "0.27", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = ["shared", "src-tauri"]

[workspace.package]
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

